<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost" android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:padding="5dp">
		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<!-- tab track -->
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:id="@+id/tab_track">
				<Button android:id="@+id/btnStart" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/start" />
				<Button android:id="@+id/btnRe" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/res" />
				<TextView android:id="@+id/txtGS" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textSize="32px" />
				<TextView android:id="@+id/txtCAS" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textSize="32px" />
				<TextView android:id="@+id/txtCAS20" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textSize="32px" />
				<TextView android:id="@+id/txtTGS" android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/txtTS" android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/txtTS20" android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/txtAS" android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/txtT" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/ti" />
				<TextView android:id="@+id/txtD" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/di" />
				<TextView android:id="@+id/txtLoc" android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/txtLoc2" android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
			</LinearLayout>
		</FrameLayout>
	</LinearLayout>
</TabHost>
